--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
-   "buildCommand": "cd client && yarn install && ./node_modules/vite/bin/vite.js build",
+   "buildCommand": "cd client && yarn install && yarn build",
   "outputDirectory": "client/dist",
   "framework": "vite",
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
       
