--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,11 @@
 {
-  "builds": [
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
-  "buildCommand": "cd client && yarn install && yarn build",
+  "buildCommand": "cd client && yarn && ./node_modules/vite/bin/vite.js build --assetsDir ./",
   "outputDirectory": "client/dist",
   "framework": "vite",
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
     }
   ]
 }
