--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
     "mongodb": "^6.6.2",
+    "axios": "^1.7.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
